<resources>
    <string name="app_name">Mycalculatorapp</string>

    <string name="press_here">press here !!</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="mod">%</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="sex">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="sub">-</string>
    <string name="nigne">9</string>
    <string name="eaght">8</string>
    <string name="seven">7</string>
    <string name="mul">×</string>
    <string name="dev">÷</string>
    <string name="clear">C</string>
</resources>